--- a/package.json
+++ b/package.json
@@ -12,11 +12,20 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "@nuxtjs/i18n": "^9.1.1",
+    "@vueuse/core": "^12.4.0",
     "nuxt": "^3.15.0",
     "vue": "latest",
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@nuxt/eslint-config": "^0.7.5",
+    "@nuxtjs/eslint-module": "^4.1.0",
+    "eslint": "^9.17.0",
+    "eslint-plugin-format": "^1.0.1",
+    "eslint-plugin-nuxt": "^4.0.0",
+    "eslint-plugin-vue": "^9.32.0",
+    "prettier": "^3.4.2",
+    "typescript": "^5.7.3",
     "vite-plugin-vuetify": "^2.0.4",
     "vuetify": "^3.7.6"
   }
