--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "nuxt-app",
-  "private": true,
   "type": "module",
+  "private": true,
   "scripts": {
     "build": "nuxt build",
     "start": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
@@ -17,6 +19,12 @@
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^4.1.1",
+    "@rushstack/eslint-patch": "^1.10.5",
+    "@vue/eslint-config-standard-with-typescript": "^9.0.0",
+    "@vue/eslint-config-typescript": "^14.3.0",
+    "eslint": "^9.19.0",
+    "eslint-plugin-vue": "^9.32.0",
     "vite-plugin-vuetify": "^2.0.4",
     "vuetify": "^3.7.6"
   }
