--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mdi/font": "^7.4.47",
     "@nuxtjs/i18n": "^9.1.5",
     "@pinia/nuxt": "^0.9.0",
+    "@vueuse/core": "^12.5.0",
     "nuxt": "^3.15.4",
     "pinia": "^2.3.1",
     "vue": "latest",
