--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "test:unit": "vitest run --dir ./test/vitest",
+    "test:integration:headed": "playwright test --ui",
+    "test:integration": "playwright test",
+    "test:integration:debug": "playwright test --debug --headed"
   },
   "dependencies": {
     "@intlify/nuxt3": "^0.2.4",
@@ -24,12 +28,19 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.1.1",
+    "@axe-core/playwright": "^4.10.1",
+    "@playwright/test": "^1.50.1",
     "@rushstack/eslint-patch": "^1.10.5",
+    "@vitejs/plugin-vue": "^5.2.1",
     "@vue/eslint-config-standard-with-typescript": "^9.0.0",
     "@vue/eslint-config-typescript": "^14.3.0",
+    "@vue/test-utils": "^2.4.6",
     "eslint": "^9.19.0",
     "eslint-plugin-vue": "^9.32.0",
+    "jsdom": "^26.0.0",
+    "playwright-lighthouse": "^4.0.0",
     "vite-plugin-vuetify": "^2.1.0",
+    "vitest": "^3.0.5",
     "vuetify": "^3.7.11"
   }
 }
